ArchitectureTest compliance